# Resume_ranking

./: .gitattributes  .gitignore  README.md  candidate-analysis.ipynb  precompute_embeddings.ipynb  pyproject.toml  rank.py  requirements.txt  sample_candidates.py  skills-assesment.ipynb  submission_metadata_template.yaml  team_ReRankers.csv
Candidate_search/: app.py
Candidate_search/static/: script.js  style.css
Candidate_search/templates/: index.html
lance.db/__manifest/_transactions/: 0-b970781e-e252-4197-80b2-6c376885f344.txn
lance.db/candidate_resumes.lance/_transactions/: 0-d5990900-2fd4-462e-8812-215b8ec10766.txn
lance.db/jd_skills.lance/_transactions/: 0-1ba9c12a-4323-410a-bbd8-49c72922289e.txn
lance.db/jd_text.lance/_transactions/: 0-8da0fcfb-fb8e-4ea9-8d61-0294db3caeeb.txn
models/ettin-reranker-32m-v1/: README.md  config.json  config_sentence_transformers.json  model.safetensors  modules.json  tokenizer.json  tokenizer_config.json
models/ettin-reranker-32m-v1/2_Dense/: config.json  model.safetensors
models/ettin-reranker-32m-v1/3_LayerNorm/: config.json  model.safetensors
models/ettin-reranker-32m-v1/4_Dense/: config.json  model.safetensors
src/: filter.py  gen_csv.py  hardcoded.py  heuristic.py  main.py  reader.py  reasoning.py  rerank.py  utils.py  vector_search.py
