[project]
name = "resume-ranking-reranked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "flask>=3.1.3",
    "isort>=8.0.1",
    "lancedb>=0.33.0",
    "llama-cpp-python>=0.3.31",
    "pandas>=3.0.3",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
